# DeepCoderX

./: .deepcoderx_context.md  .gitignore  CLAUDE_DEEPCODERX.md  CONTEXT FILE FOR DEEPCODERX PROJECT (CLAUDE).MD  CONTEXT_FILE_TEMPLATE.MD  CREDITS.md  Codebase_Analysis_Current.md  Codebase_Analysis_Final.md  Codebase_Improvements.md  DOCUMENTATION.md  DeepCoderX.md  DeepCoderX.spec  DeepCoderX_Comprehensive_Analysis_2025.md  Deepseek_Code_analisys_02.rtf  INSTALL.md  LEGACY_MIGRATION_PLAN.md  MEMORY_FOR_NEXT_CHAT.MD  NLU_Implementation_Plan.md  TEST_FIX_README.md  __main__.py  app.py  app.py.BAK  app.py.BAK6  app.py.BAK_MIGRATION  check_syntax.py  claude_tests_analysis.rtf  codebase_analysis.md  config.py  config.py.BAK  config.py.BAK2  config.py.BAK3  config.py.BAK4  config.py.BAK5  debug_current_config.py  debug_deepseek_routing.py  diagnose_deepseek_fixed.py  diagnose_deepseek_performance.py  emergency_fix.py  fix_deepseek_session.py  pyproject.toml  (+67 more)
.deepcoderx/: deepseek_session.json  local_session.json
deepcoderx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
documentation/: DEEPSEEK RUBUST TESTING PROMPTS.MD  DEEPSEEK_Comprehensive Architecture for Multi-Model CLI.MD  DeepCoderX - Comprehensive Audit.MD  DeepCoderX MCP File System Expansion Analysis.MD  DeepCoderX Project Context Enhancement Guide  Git functions.MD  README.md  Test Suite Analysis.MD  architecture.md  backup-routine.MD  codebase_analysis_report.md  context_loading_behavior.md  contributing.md  deepseek_analysis_genesis.md  getting_started.md  introduction.md  layout.txt  mcp_protocol.md  usage.md  (+6 more)
(+65 files in other folders)
