[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcoderx"
version = "1.1.0"
authors = [
    { name="Your Name", email="you@example.com" },
]
description = "An AI-powered coding assistant with a secure, sandboxed environment."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
